--- a/package.json
+++ b/package.json
@@ -24,5 +24,11 @@
     "path": "^0.12.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.1.0",
+    "babel-preset-react": "^6.24.1",
+    "webpack": "^4.43.0"
   }
 }
