--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "description": "Footer and you'll see this component of a product on fenty beauty",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "start": "nodemon server/index.js",
+    "build": "webpack -w"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/proj-plus-ultra/fenty-footer-youll-wanna-see-this.git"
@@ -27,8 +30,10 @@
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
-    "babel-loader": "^8.1.0",
+    "babel-loader": "^7.1.5",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "webpack": "^4.43.0"
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11"
   }
 }
