--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon server/index.js",
-    "build": "webpack -w"
+    "build": "webpack -w",
+    "schema": "mysql -u root < schema.sql",
+    "seed": "node database/seed.js "
   },
   "repository": {
     "type": "git",
