--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "babel-loader": "^7.1.5",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "jest": "^25.5.3",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
   }
