--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "nodemon server/index.js",
     "build": "webpack -w",
     "schema": "mysql -u root < schema.sql",
-    "seed": "node database/seed.js "
+    "seed": "node database/seed.js ",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -31,11 +32,25 @@
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.9.6",
+    "@babel/preset-react": "^7.9.4",
     "babel-core": "^6.26.3",
+    "babel-jest": "^24.9.0",
     "babel-loader": "^7.1.5",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "eslint": "^6.5.1",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.15.1",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "jest": "^25.5.3",
+    "jest-environment-enzyme": "^7.1.1",
+    "jest-enzyme": "^7.1.1",
+    "react-test-renderer": "^16.13.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
   }
