--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "nodemon": "^2.0.3",
     "path": "^0.12.7",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-responsive-carousel": "^3.2.5"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.9.6",
@@ -40,13 +41,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.14.0",
-    "eslint": "^6.5.1",
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.15.1",
-    "eslint-plugin-react-hooks": "^1.7.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "jest": "^25.5.3",
     "jest-environment-enzyme": "^7.1.1",
     "jest-enzyme": "^7.1.1",
