--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "path": "^0.12.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-responsive-carousel": "^3.2.5"
+    "react-popup": "^0.10.0",
+    "react-responsive-carousel": "^3.2.5",
+    "reactjs-popup": "^1.5.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.9.6",
