--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "babel-preset-react": "^6.24.1",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.2",
+    "http-proxy-middleware": "^1.0.3",
     "jest": "^25.5.3",
     "jest-environment-enzyme": "^7.1.1",
     "jest-enzyme": "^7.1.1",
