--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/proj-plus-ultra/fenty-footer-youll-wanna-see-this#readme",
   "dependencies": {
+    "aws-sdk": "^2.676.0",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.4.1",
