--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon server/index.js",
-    "build": "webpack -w",
+    "build": "webpack",
     "schema": "mysql -u root < schema.sql",
     "seed": "node database/seed.js ",
-    "test": "jest"
+    "test": "jest",
+    "aws": "aws s3 sync client/dist s3://navvideo --acl public-read",
+    "deploy": "npm run build && npm run aws"
   },
   "repository": {
     "type": "git",
@@ -34,7 +36,8 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
-    "reactjs-popup": "^1.5.0"
+    "reactjs-popup": "^1.5.0",
+    "uuid": "^8.0.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.9.6",
