--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,20 @@ client/dist/bundle.js
 client/src/config
 coverage
 server/config.js
+
+#amplify
+amplify
+amplify/\#current-cloud-backend
+amplify/.config/local-*
+amplify/mock-data
+amplify/backend/amplify-meta.json
+amplify/backend/awscloudformation
+build/
+dist/
+node_modules/
+aws-exports.js
+awsconfiguration.json
+amplifyconfiguration.json
+amplify-build-config.json
+amplify-gradle-config.json
+amplifyxc.config
